--- a/figma2.html
+++ b/figma2.html
@@ -18,6 +18,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -111,7 +116,7 @@
             </div>
             <div class="container">
               <div class="row">
-                <img class="mw-100" src="assest/img/group of people.png">
+                <div class="people-image"></div>
               </div>
             </div>
     </section>
@@ -300,24 +305,23 @@
     </section>
     <section class="create-section">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-6">
-            <div id="create-container">
-              <div id="create-text">Create</div>
-              <div class="advance-text"><b>Advanced research software</b></div>
-              <div class="ask-text">
-                Ask the right questions and get the answers you<br>
-                need with the most secure and collaborative<br>
-                survey platform on the market featuring<br>
-                powerful logic, sophisticated analytics, and<br>
-                built-in automation and integration.
-              </div>
-              <div class="getstarted">
-                <span class="getstarted-text">Get Started for free</span>
-              </div>
+        <div class="row">
+          <div class="col-md-7">
+            <h3 id="create-text">Create
+            </h3>
+            <p class="advance-text"><b>Advanced research software</b></p>
+            <div class="ask-text">
+              Ask the right questions and get the answers you<br>
+              need with the most secure and collaborative<br>
+              survey platform on the market featuring<br>
+              powerful logic, sophisticated analytics, and<br>
+              built-in automation and integration.
+            </div>
+            <div class="getstarted2">
+              <span class="getstarted-text">Get Started for free</span>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <div class="Laptop-image"></div>
           </div>
         </div>
@@ -328,9 +332,12 @@
         <div class="row">
           <div class="col-md-4">
             <div class="drive-impact">
-              <div class="col-md-3 driveimpact text-center mb-3">
+              <div class="col-md-3 driveimpact">
+                <div class="awardframe">
+                  <span id="awards">Testimonials</span>
+                </div>
                 <p class="see">
-                  see how<br> Customers<br><b>drive Impact</b>
+                  See how<br> Customers<br><b>drive Impact</b>
                 </p>
                 <div class="frame60">
                   <span class="seeCaseStudies">See case studies</span>
@@ -371,12 +378,12 @@
     <section class="second-frame">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-7">
             <div class="line"></div>
             <div class="looking-container">
               <p class="looking-text-editor">Looking for a <b>solution</b><br> for your business?</p>
               <div class="checkout-text">
-                Check out Sogolytics enterprise feedback and experience management platform.
+                Check out Sogolytics enterprise feedback and<br>experience management platform.
               </div>
               <div class="checkout-container">
                 <div class="learnmore-frame">
@@ -388,7 +395,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-5">
             <div class="schedule-image"></div>
           </div>
         </div>
@@ -464,9 +471,9 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <!-- place footer here -->
-    <section class="footer">
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-md-3">
@@ -510,6 +517,27 @@
               <li>Team</li>
               <li>Contact Us</li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="footerline"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="Copyright">Copyright 2022 Circle. All rights reserved.</div>
+          </div>
+          <div class="col-md-4">
+            <div class="footer-social">
+              <img class="link" src="/assest/img/linkindle.png">
+              <img src="/assest/img/twitter.png" class="link">
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="Privacy">
+              Privacy Policy | Data & Security | Terms of Service | Data & Security
+            </div>
           </div>
         </div>
       </div>
